--- a/source/ui-material-grid/src/app/app.component.css
+++ b/source/ui-material-grid/src/app/app.component.css
@@ -1,3 +1,12 @@
 mat-card-header img {
     border-radius: 50%;
 }
+
+.verticle {
+    display: flex;
+    flex-flow: row
+}
+
+.section {
+    width: 50%;
+}
