--- a/source/ui-material-grid/src/app/app.component.css
+++ b/source/ui-material-grid/src/app/app.component.css
@@ -2,6 +2,10 @@ mat-card-header img {
     border-radius: 50%;
 }
 
+mat-card {
+    margin: 20px;
+}
+
 .verticle {
     display: flex;
     flex-flow: row
@@ -9,4 +13,5 @@ mat-card-header img {
 
 .section {
     width: 50%;
+    box-shadow: 0 3px 1px -2px rgba(0, 0, 0, .2), 0 2px 2px 0 rgba(0, 0, 0, .14), 0 1px 5px 0 rgba(0, 0, 0, .12);
 }
