--- a/source/ui-material-grid/src/app/app.component.html
+++ b/source/ui-material-grid/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="verticle">
     <div class="section">
         <mat-toolbar>
-            Properties
+            Results
         </mat-toolbar>
         <mat-card *ngFor="let property of properties">
             <mat-card-header>
