--- a/source/ui-material-grid/src/app/app.component.html
+++ b/source/ui-material-grid/src/app/app.component.html
@@ -5,14 +5,15 @@
             Results
         </mat-toolbar>
 
-        <mat-card *ngFor="let property of properties" [popper]="popper2Content" [popperApplyClass]="'popper--dark'" [popperTimeout]="1000">
+        <mat-card *ngFor="let property of properties" [popper]="popper2Content" [popperApplyClass]="'popper--dark'" [popperTimeout]="1000" [popperPlacement]="'bottom'">
             <mat-card-header>
                 <img [src]="property.agency.logo">
+                <span [style.color]="property.agency.brandingColors.primary" [cpPosition]="'bottom'" [cpPositionOffset]="'50%'" [cpPositionRelativeToArrow]="true" [(colorPicker)]="property.agency.brandingColors.primary">Primary Color</span>
             </mat-card-header>
             <img mat-card-image [src]="property.mainImage">
 
             <mat-card-actions>
-                <span [style.color]="property.agency.brandingColors.primary" [cpPosition]="'top'" [cpPositionOffset]="'50%'" [cpPositionRelativeToArrow]="true" [(colorPicker)]="property.agency.brandingColors.primary">Primary Color</span>
+                {{property.price}}
             </mat-card-actions>
             <popper-content #popper2Content>
                 <button mat-button (click)="OnAddProperty(property.id)">
@@ -30,10 +31,11 @@
         <mat-card *ngFor="let property of savedProperties" [popper]="popper1Content" [popperApplyClass]="'popper--dark'" [popperTimeout]="1000">
             <mat-card-header>
                 <img [src]="property.agency.logo">
+                <span [style.color]="property.agency.brandingColors.primary" [cpPosition]="'top'" [cpPositionOffset]="'50%'" [cpPositionRelativeToArrow]="true" [(colorPicker)]="property.agency.brandingColors.primary">Primary Color</span>
             </mat-card-header>
             <img mat-card-image [src]="property.mainImage">
             <mat-card-actions>
-                <span [style.color]="property.agency.brandingColors.primary" [cpPosition]="'top'" [cpPositionOffset]="'50%'" [cpPositionRelativeToArrow]="true" [(colorPicker)]="property.agency.brandingColors.primary">Primary Color</span>
+                {{property.price}}
             </mat-card-actions>
             <popper-content #popper1Content>
                 <button mat-button (click)="OnRemoveProperty(property.id)">
